--- a/FinalProject/jokeprovider/build.gradle
+++ b/FinalProject/jokeprovider/build.gradle
@@ -1,8 +1,15 @@
-plugins {
-    id 'java-library'
+buildscript {
+    repositories {
+        jcenter()
+    }
 }
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
+repositories {
+    jcenter()
 }
+
+apply plugin: 'java'
+apply plugin: 'war'
+
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
